--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="button_close">Close</string>
     <string name="label_solution">Solution</string>
     <string name="label_tips">tips</string>
+    <string name="toast_message_click_exit_again">Click exit again</string>
 </resources>
