implement note marking and erasing refactorize project structure

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,7 +2,9 @@
     <string name="app_name">sudoku</string>
     <string name="button_new_game">new game</string>
     <string name="button_close">Close</string>
+    <string name="button_clear">Clear</string>
     <string name="label_solution">Solution</string>
     <string name="label_tips">tips</string>
     <string name="toast_message_click_exit_again">Click exit again</string>
+    <string name="label_note">Note</string>
 </resources>
